@@ -130,6 +130,7 @@ Stas Panteleev
 Stephano (cao)
 Stephen L. Holtz (stephenholtz)
 Stéphane (istib)
+sudo-nice
 svenn71
 Svenn Are Bjerkem (svenn)
 Svyatoslav Mishyn (juef)
