@@ -284,6 +284,8 @@
 	Fixed 'wordchars' parsing to handle non-ascii input without memory
 	violation.
 
+	Fixed incorrect 'sort' state after :restart.  Thanks to sudo-nice.
+
 0.8.2-beta to 0.8.2
 
 	Added support for matchit to filetype plugin.  Patch by filterfalse.
